--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,18 +2,82 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_marginBottom="?android:attr/actionBarSize"
+    >
 
-    <TextView
-        android:id="@+id/text_home"
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/layout_app_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="#FFFFFF"
+        app:liftOnScroll="true"
+        >
+        <EditText
+            android:id="@+id/search_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Search"
+            android:textColor="#928D8D"
+            android:drawableLeft="@drawable/ic_search"
+            android:background="@drawable/background_search"
+            android:layout_margin="@dimen/main_item_margin"
+            android:padding="@dimen/main_item_margin"
+            android:textAlignment="center"
+            />
+
+    </com.google.android.material.appbar.AppBarLayout>
+
+
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/layout_nested"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/layout_app_bar"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        >
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layout_constraint_1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            >
+            <ImageView
+                android:id="@+id/img_main_recipe"
+                android:layout_width="match_parent"
+                android:layout_height="350dp"
+                app:layout_constraintTop_toTopOf="@+id/layout_constraint_1"
+                android:layout_margin="@dimen/main_item_margin"
+                />
+        <!--    List of Recipe of Category 1-->
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/list_recent_recipe1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                app:layout_constraintTop_toBottomOf="@+id/img_main_recipe"
+                app:layout_constraintLeft_toLeftOf="parent"
+                />
+            <!--    List of Recipe of Category 2-->
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/list_recent_recipe2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                app:layout_constraintTop_toBottomOf="@+id/list_recent_recipe1"
+                app:layout_constraintLeft_toLeftOf="parent"
+                />
+    <!--        List of Recipe of Category 4-->
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/list_recent_recipe4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="@dimen/main_item_margin"
+                android:layout_marginRight="@dimen/main_item_margin"
+                app:layout_constraintTop_toBottomOf="@+id/list_recent_recipe2"
+                app:layout_constraintLeft_toLeftOf="parent"
+                />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.core.widget.NestedScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
