--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,7 @@
     <color name="colorAccent">#D81B60</color>
     <color name="splashScreen">#FFFFFF</color>
     <color name="colorImgBackground">#FFFFFF</color>
+    <color name="colorgrey">#fafafa</color>
+    <color name="colordarkblue">#09c6df</color>
+    <color name="colorlightblue">#0bcce6</color>
 </resources>
