--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -3,7 +3,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/scrollView"
+    android:id="@+id/scrollViewXML"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
@@ -21,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="0dp"
+            android:layout_marginTop="20dp"
             android:text="@string/CreateAccount"
             android:textColor="@color/hyperlink"
             android:textSize="30sp"
@@ -49,7 +49,6 @@
                 android:layout_height="60dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="2dp"
-                android:textStyle="bold"
                 android:scrollHorizontally="true" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -73,7 +72,6 @@
                 android:layout_height="60dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="2dp"
-                android:textStyle="bold"
                 android:scrollHorizontally="true" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -95,7 +93,6 @@
                 android:layout_height="60dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="2dp"
-                android:textStyle="bold"
                 android:hint="@string/email"
                 android:inputType="textEmailAddress"
                 android:maxLines="1"
@@ -123,7 +120,6 @@
                 android:layout_height="60dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="2dp"
-                android:textStyle="bold"
                 android:fontFamily="casual"
                 android:hint="@string/password"
                 android:inputType="textPassword"
