Added Recipe Description module, rating the recipe, share recipe and share nutrition list, layout for save to MyRecipe and remove app bar for home fragement.

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -13,6 +13,7 @@
         app:layout_constraintTop_toTopOf="parent"
         android:background="#FFFFFF"
         app:liftOnScroll="true"
+        android:focusableInTouchMode="true"
         >
         <EditText
             android:id="@+id/search_bar"
