--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,9 @@
     <dimen name="list_item_margin">5dp</dimen>
     <dimen name="main_item_margin">10dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="recipe_text_view_padding">4dp</dimen>
+    <dimen name="recipe_text_view_margin">16dp</dimen>
+    <dimen name="recipe_user_name_margin">4dp</dimen>
+    <dimen name="recipe_button_view_margin">20dp</dimen>
+    <dimen name="recipe_scroll_padding">4dp</dimen>
 </resources>
