--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
@@ -14,9 +14,9 @@
         <item name="android:layout_margin">8dp</item>
     </style>
 
-    <style name="MyTheme" parent="AppTheme">
-        <item name="android:windowBackground">@android:color/white</item>
-    </style>
+<!--    <style name="MyTheme" parent="AppTheme">-->
+<!--        <item name="android:windowBackground">@android:color/white</item>-->
+<!--    </style>-->
 
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
@@ -27,4 +27,79 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="RecipeTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="homeAsUpIndicator">@drawable/ic_arrow_back_black_24dp</item>
+        <item name="textAppearanceHeadline4">@style/TextAppearance.RecipeTheme.Headline4</item>
+        <item name="textAppearanceHeadline5">@style/TextAppearance.RecipeTheme.Headline5</item>
+        <item name="textAppearanceHeadline6">@style/TextAppearance.RecipeTheme.Headline6</item>
+        <item name="textAppearanceBody1">@style/TextAppearance.RecipeTheme.Body1</item>
+        <item name="textAppearanceBody2">@style/TextAppearance.RecipeTheme.Body2</item>
+        <item name="textAppearanceSubtitle1">@style/TextAppearance.RecipeTheme.Subtitle1</item>
+        <item name="textAppearanceSubtitle2">@style/TextAppearance.RecipeTheme.Subtitle2</item>
+        <item name="chipStyle">@style/TextAppearance.RecipeThem.Chip</item>
+        <item name="textAppearanceButton">@style/TextAppearance.RecipeTheme.Button</item>
+    </style>
+
+    <style name="RecipeTheme.Toolbar" parent="Widget.AppCompat.Toolbar">
+
+        <item name="android:background">#FFFFFF</item>
+        <item name="android:theme">@style/RecipeTheme</item>
+    </style>
+
+    <style name="TextAppearance.RecipeTheme.Headline4" parent="TextAppearance.MaterialComponents.Headline4">
+        <item name="fontFamily">sans-serif-condensed</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/colorBlack</item>
+        <item name="android:letterSpacing" tools:targetApi="lollipop">0.002</item>
+    </style>
+
+    <style name="TextAppearance.RecipeTheme.Headline5" parent="TextAppearance.MaterialComponents.Headline5">
+        <item name="fontFamily">sans-serif-condensed</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/colorBlack</item>
+    </style>
+
+    <style name="TextAppearance.RecipeTheme.Headline6" parent="TextAppearance.MaterialComponents.Headline6">
+        <item name="fontFamily">sans-serif-condensed</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/colorBlack</item>
+    </style>
+
+
+    <style name="TextAppearance.RecipeTheme.Body1" parent="TextAppearance.MaterialComponents.Body1">
+        <item name="fontFamily">sans-serif-condensed-light</item>
+        <item name="android:textColor">@color/colorBlack</item>
+    </style>
+
+    <style name="TextAppearance.RecipeTheme.Body2" parent="TextAppearance.MaterialComponents.Body2">
+        <item name="fontFamily">sans-serif-condensed-light</item>
+        <item name="android:textColor">@color/colorBlack</item>
+    </style>
+
+    <style name="TextAppearance.RecipeTheme.Subtitle1" parent="TextAppearance.MaterialComponents.Subtitle1">
+        <item name="fontFamily">sans-serif-condensed-light</item>
+        <item name="android:textColor">@color/colorBlack</item>
+    </style>
+
+    <style name="TextAppearance.RecipeTheme.Subtitle2" parent="TextAppearance.MaterialComponents.Subtitle2">
+        <item name="fontFamily">sans-serif-condensed-light</item>
+        <item name="android:textColor">@color/colorBlack</item>
+    </style>
+
+    <style name="TextAppearance.RecipeThem.Chip" parent="TextAppearance.MaterialComponents.Chip">
+        <item name="fontFamily">sans-serif-condensed</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/colorAccent</item>
+    </style>
+
+    <style name="TextAppearance.RecipeTheme.Button" parent="TextAppearance.MaterialComponents.Button">
+        <item name="fontFamily">sans-serif-condensed</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
 </resources>
