--- a/app/src/main/res/drawable/background_user_img.xml
+++ b/app/src/main/res/drawable/background_user_img.xml
@@ -1,13 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
+<shape android:shape="rectangle"
+    android:innerRadius="0dp"
+    android:thicknessRatio="2"
+    android:useLevel="false"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!--    Stokes of background.-->
     <solid
-        android:color="@color/colorWhite"
+        android:color="@android:color/transparent"
         />
     <!--    Corner radius for Image background.-->
     <corners
-        android:radius="250dp"
+        android:radius="350dp"
+        />
+    <stroke
+        android:width="10dp"
+        android:color="@color/colorWhite"
         />
 
 </shape>
