--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -6,30 +6,44 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".activity.ui.login.LogInFragment">
 
+    <TextView
+        android:id="@+id/txt_title_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/app_name"
+        android:textSize="40sp"
+        android:fontFamily="cursive"
+        android:textColor="@color/colorPrimaryDark"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="60dp"
+        />
+
     <!-- Login Text Fields -->
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/ip_layout_email"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginRight="40dp"
         app:helperText="@string/email_address"
+        app:helperTextTextAppearance="?attr/textAppearanceSubtitle2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/txt_title_name">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/et_email"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="2dp"
-            android:fontFamily="casual"
+            android:textAppearance="?attr/textAppearanceBody1"
             android:hint="@string/email"
             android:inputType="textEmailAddress"
             android:lines="1"
@@ -39,7 +53,6 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/ip_layout_Password"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -47,6 +60,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="20dp"
         app:helperText="@string/password_valid"
+        app:helperTextTextAppearance="?attr/textAppearanceSubtitle2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ip_layout_email"
         app:passwordToggleEnabled="true">
@@ -57,7 +71,7 @@
             android:layout_height="60dp"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="2dp"
-            android:fontFamily="casual"
+            android:textAppearance="?attr/textAppearanceBody1"
             android:hint="@string/password"
             android:inputType="textPassword"
             android:scrollHorizontally="true" />
@@ -65,16 +79,15 @@
 
 
     <!--Login button-->
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_Login"
-        android:layout_width="200dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
-        android:background="@color/button_color"
         android:text="@string/login"
         android:textAllCaps="true"
-        android:textColor="@color/button_text"
+        android:layout_margin="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ip_layout_Password" />
@@ -84,42 +97,83 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:textColor="@color/hyperlink"
+        android:textAppearance="?attr/textAppearanceSubtitle2"
         android:clickable="true"
         android:layout_marginTop="10dp"
-        android:textSize="15dp"
         android:text="@string/forgot_password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_Login"  />
 
-    <Button
-        android:id="@+id/btn_Create_Account"
-        android:layout_width="200dp"
+    <TextView
+        android:id="@+id/tv_creat_account"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="80dp"
+        android:textAppearance="?attr/textAppearanceSubtitle2"
         android:clickable="true"
-        android:focusable="true"
-        android:textColor="@color/button_text"
-        android:background="@color/button_color"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="100dp"
+        android:text="Don't have account?"
+        app:layout_constraintRight_toLeftOf="@+id/btn_Create_Account"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password"  />
+
+    <com.google.android.material.chip.Chip
+        android:id="@+id/btn_Create_Account"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
         android:text="@string/create_account"
-        android:linksClickable="true"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password" />
+        android:layout_marginTop="10dp"
+        app:layout_constraintLeft_toRightOf="@id/tv_creat_account"
+        app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password"
+        />
+
+    <View
+        android:id="@+id/line_left"
+        android:layout_width="130dp"
+        android:layout_height="1dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="35dp"
+        android:background="@color/colorgrey"
+        app:layout_constraintTop_toBottomOf="@id/btn_Create_Account"
+        app:layout_constraintLeft_toLeftOf="parent"
+        />
+
+    <View
+        android:id="@+id/line_right"
+        android:layout_width="130dp"
+        android:layout_height="1dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="35dp"
+        android:background="@color/colorgrey"
+        app:layout_constraintTop_toBottomOf="@id/btn_Create_Account"
+        app:layout_constraintRight_toRightOf="parent"
+        />
+
+    <TextView
+        android:id="@+id/tv_or"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:textAppearance="?attr/textAppearanceSubtitle2"
+        android:layout_marginTop="25dp"
+        android:text="OR"
+        app:layout_constraintRight_toLeftOf="@id/line_right"
+        app:layout_constraintLeft_toRightOf="@+id/line_left"
+        app:layout_constraintTop_toBottomOf="@+id/btn_Create_Account"
+        />
+
 
     <com.google.android.gms.common.SignInButton
         android:id="@+id/google_button"
-        android:layout_width="230dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@style/viewCustom"
-        android:clickable="true"
-        android:focusable="true"
-        android:layout_marginTop="10dp"
-        android:padding="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_Create_Account"/>
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="30dp"
+        app:layout_constraintTop_toBottomOf="@+id/tv_or"
+        app:layout_constraintBottom_toBottomOf=""/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
