--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -5,27 +5,141 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/text_dashboard"
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/upload_app_bar_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:backgroundTint="@color/colorWhite"
+        >
+        <com.google.android.material.chip.Chip
+            android:id="@+id/btn_logout"
+            android:text="Logout"
+            android:textAppearance="?attr/textAppearanceBody1"
+            android:textStyle="bold"
+            android:textColor="@color/colorPrimaryDark"
+            android:layout_gravity="right"
+            android:layout_margin="28dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+        />
+        <ImageView
+            android:id="@+id/img_profile"
+            android:layout_width="88dp"
+            android:layout_height="88dp"
+            android:layout_gravity="center"
+            android:layout_margin="4dp"
+            />
+        <TextView
+            android:id="@+id/txt_user_name_profile"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textAppearance="?attr/textAppearanceHeadline6"
+            android:textStyle="bold"
+            android:layout_marginBottom="@dimen/main_item_margin"
+            />
+    </com.google.android.material.appbar.AppBarLayout>
 
-    <Button
-        android:id="@+id/sign_out_button"
+<!--    Recently view title-->
+    <TextView
+        android:id="@+id/txt_recently_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Recently Viewed"
+        android:textAppearance="@style/TextAppearance.RecipeTheme.Subtitle1.Accent"
+        android:padding="@dimen/recipe_text_view_padding"
+        app:layout_constraintTop_toBottomOf="@id/upload_app_bar_layout"
+        android:layout_margin="@dimen/main_item_margin"
+        />
+    <!--    List of Recipe of Recently viewed-->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/list_recently_viewed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/sign_out"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@id/txt_recently_view"
+        app:layout_constraintLeft_toLeftOf="parent"
+        />
+<!--    Uploaded recipe title-->
+    <TextView
+        android:id="@+id/txt_uploaded_recipe"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Uploaded Recipe"
+        android:textAppearance="@style/TextAppearance.RecipeTheme.Subtitle1.Accent"
+        android:padding="@dimen/recipe_text_view_padding"
+        app:layout_constraintTop_toBottomOf="@id/list_recently_viewed"
+        android:layout_margin="@dimen/main_item_margin"
+        />
+<!--    List of uploaded recipe-->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/list_uploaded"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@id/txt_uploaded_recipe"
+        app:layout_constraintLeft_toLeftOf="parent"
+        />
+
+<!--    <Button-->
+<!--        android:id="@+id/sign_out_button"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="@string/sign_out"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"/>-->
+
+<!--    Upload fab-->
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+        android:id="@+id/fab_upload"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Uplaod"
+        android:textColor="@color/colorWhite"
+        app:icon="@drawable/ic_file_upload"
+        app:iconGravity="end"
+        app:iconTint="@color/colorWhite"
+        android:backgroundTint="@color/colorPrimaryDark"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        android:layout_marginRight="12dp"
+        android:layout_marginBottom="62dp"
+        />
+<!--    Gallery fab-->
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+        android:id="@+id/fab_gallery"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="Gallery"
+        android:text="Gallery"
+        android:textColor="@color/colorWhite"
+        app:icon="@drawable/ic_photo_library"
+        app:iconGravity="end"
+        app:iconTint="@color/colorWhite"
+        android:backgroundTint="@color/colorPrimaryDark"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/fab_upload"
+        android:layout_margin="@dimen/recipe_button_view_margin"
+        android:visibility="gone"
+        />
+<!--    Camera fab-->
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+        android:id="@+id/fab_camera"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Camera"
+        android:textColor="@color/colorWhite"
+        app:icon="@drawable/ic_camera"
+        app:iconGravity="end"
+        app:iconTint="@color/colorWhite"
+        android:backgroundTint="@color/colorPrimaryDark"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/fab_gallery"
+        android:layout_margin="@dimen/recipe_button_view_margin"
+        android:visibility="gone"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
