--- a/app/src/main/res/layout/recipe_grid_item.xml
+++ b/app/src/main/res/layout/recipe_grid_item.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/layout_recipe_grid"
     android:orientation="vertical"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:padding="@dimen/list_padding"
     >
@@ -14,9 +14,10 @@
         />
     <TextView
         android:id="@+id/txt_recipe_item_grid"
-        android:layout_width="match_parent"
+        android:layout_width="@dimen/grid_item_height"
         android:layout_height="wrap_content"
-        android:textSize="15sp"
-        android:textColor="#000000"
+        android:text=""
+        android:textAppearance="?attr/textAppearanceBody1"
+        android:textStyle="bold"
         />
 </LinearLayout>
