--- a/app/src/main/res/layout/recipe_list_item.xml
+++ b/app/src/main/res/layout/recipe_list_item.xml
@@ -19,8 +19,8 @@
         android:id="@+id/txt_recipe_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="15sp"
-        android:textColor="#000000"
+        android:textAppearance="?attr/textAppearanceBody1"
+        android:textStyle="bold"
         />
 
 </LinearLayout>
