--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,7 +7,7 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
-
+recipe
     <style name="viewCustom">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
@@ -83,6 +83,12 @@
     <style name="TextAppearance.RecipeTheme.Subtitle1" parent="TextAppearance.MaterialComponents.Subtitle1">
         <item name="fontFamily">sans-serif-condensed-light</item>
         <item name="android:textColor">@color/colorBlack</item>
+    </style>
+
+    <style name="TextAppearance.RecipeTheme.Subtitle1.Accent" parent="TextAppearance.RecipeTheme.Subtitle1">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/colorAccent</item>
+        <item name="android:textAllCaps">true</item>
     </style>
 
     <style name="TextAppearance.RecipeTheme.Subtitle2" parent="TextAppearance.MaterialComponents.Subtitle2">
