Added changes for Search module and added module for upload from gallery.

--- a/app/src/main/res/layout/activity_upload_recipe.xml
+++ b/app/src/main/res/layout/activity_upload_recipe.xml
@@ -47,6 +47,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 <!--    Upload Button-->
     <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_upload"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="UPLOAD RECIPE"
