--- a/app/src/main/res/layout/dialog_forgot_password.xml
+++ b/app/src/main/res/layout/dialog_forgot_password.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:padding="8dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -12,6 +13,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         android:layout_margin="10dp"
         android:padding="@dimen/recipe_text_view_padding"
         android:text="Forgot Password"
@@ -21,10 +23,11 @@
 <!--    Edit text to enter email address-->
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/edit_text_forgot_email_layout"
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:hint="Enter Email Address"
         app:layout_constraintTop_toBottomOf="@+id/txt_forgot_title"
+        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_margin="10dp"
         app:startIconDrawable="@drawable/ic_email_black_24dp"
         >
@@ -38,20 +41,25 @@
 <!--    Add description-->
     <TextView
         android:id="@+id/txt_forgot_desc"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Link to reset password will be sent to this Email address."
         android:textAppearance="?attr/textAppearanceSubtitle1"
         app:layout_constraintTop_toBottomOf="@+id/edit_text_forgot_email_layout"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:gravity="center"
         android:layout_margin="10dp"
         />
 <!--    send button-->
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_forgot"
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="Reset Password"
         app:layout_constraintTop_toBottomOf="@+id/txt_forgot_desc"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         android:layout_margin="10dp"
         />
 
