--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -173,7 +173,6 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@+id/tv_or"
-        app:layout_constraintBottom_toBottomOf=""/>
+        app:layout_constraintTop_toBottomOf="@+id/tv_or" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
