--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -17,84 +17,89 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/tv_Sign_Up"
+            android:id="@+id/txt_title_name_signup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="20dp"
-            android:text="@string/CreateAccount"
-            android:textColor="@color/hyperlink"
-            android:textSize="30sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:text="@string/app_name"
+            android:textSize="40sp"
+            android:fontFamily="cursive"
+            android:textColor="@color/colorPrimaryDark"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="60dp"
+            />
 
         <!-- Login Text Fields -->
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/ip_First_Name"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginLeft="20dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="40dp"
             android:layout_marginEnd="20dp"
             android:hint="@string/First_Name"
-            app:layout_constraintTop_toBottomOf="@+id/tv_Sign_Up"
+            app:helperTextTextAppearance="?attr/textAppearanceSubtitle2"
+            app:layout_constraintTop_toBottomOf="@+id/txt_title_name_signup"
             app:layout_constraintStart_toStartOf="parent">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/et_First_Name"
-                android:layout_width="fill_parent"
-                android:layout_height="60dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="2dp"
+                android:textAppearance="?attr/textAppearanceBody1"
                 android:scrollHorizontally="true" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/ip_Last_Name"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_marginStart="20dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="20dp"
             android:hint="@string/Last_Name"
+            app:helperTextTextAppearance="?attr/textAppearanceSubtitle2"
             app:layout_constraintTop_toBottomOf="@+id/ip_First_Name"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/et_last_Name"
-                android:layout_width="fill_parent"
-                android:layout_height="60dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="2dp"
-                android:scrollHorizontally="true" />
+                android:scrollHorizontally="true"
+                android:textAppearance="?attr/textAppearanceBody1"
+                />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/ip_layout_email"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="20dp"
             app:helperText="@string/email_address"
+            app:helperTextTextAppearance="?attr/textAppearanceSubtitle2"
             app:layout_constraintTop_toBottomOf="@+id/ip_Last_Name"
             app:layout_constraintStart_toStartOf="parent">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/et_email"
-                android:layout_width="fill_parent"
-                android:layout_height="60dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="2dp"
                 android:hint="@string/email"
                 android:inputType="textEmailAddress"
+                android:textAppearance="?attr/textAppearanceBody1"
                 android:maxLines="1"
                 android:lines="1"
                 android:scrollHorizontally="true" />
@@ -102,42 +107,44 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/ip_layout_password_signup"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_marginStart="20dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="20dp"
             app:helperText="@string/password_valid"
+            app:helperTextTextAppearance="?attr/textAppearanceSubtitle2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ip_layout_email"
             app:passwordToggleEnabled="true">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/et_Password"
-                android:layout_width="fill_parent"
-                android:layout_height="60dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="2dp"
                 android:fontFamily="casual"
                 android:hint="@string/password"
+                android:textAppearance="?attr/textAppearanceBody1"
                 android:inputType="textPassword"
                 android:scrollHorizontally="true" />
         </com.google.android.material.textfield.TextInputLayout>
 
 
         <!--Login button-->
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_SignUp"
-            android:layout_width="200dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="30dp"
             android:background="@color/button_color"
             android:text="@string/SignUp"
             android:textAllCaps="true"
-            android:textColor="@color/button_text"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ip_layout_password_signup" />
