--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -108,4 +108,12 @@ recipe
         <item name="android:textSize">16sp</item>
         <item name="android:textAllCaps">false</item>
     </style>
+
+    <style name="TextAppearance.RecipeTheme.Chip.Filter" parent="Widget.MaterialComponents.Chip.Filter">
+        <item name="fontFamily">sans-serif-condensed</item>
+        <item name="android:textColor">@color/colorWhite</item>
+        <item name="chipBackgroundColor">@color/colorPrimary</item>
+        <item name="android:textAppearance">?attr/textAppearanceSubtitle1</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
 </resources>
